[tool.poetry]
name = "gogol-pin"
version = "0.1.0"
description = ""
authors = ["Evgenii Korobkov <eug.korobkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

aiomysql = "^0.2.0"
pydantic = "^2.8.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
typer = "^0.12.3"
uvloop = "^0.19.0"

[tool.poetry.scripts]
gogol-pin = "gogol_pin.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
