[project]
name = "gogol-cli"
version = "0.1.0"
description = "Gogol CLI"
authors = [
    {name = "Evgenii Korobkov", email = "eug.korobkov@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.1"
dependencies = [
    "aiomysql==0.3.0",
    "asyncssh==2.22.0",
    "diagrams==0.23.4",
    "greenlet==3.3.2",
    "pillow==12.2.0",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.35",
    "typer==0.15.4",
    "uvloop==0.20.0",
]

[project.scripts]
gogol-cli = "gogol_cli.__main__:cli"

[dependency-groups]
dev = [
    "ruff==0.6.9",
    "ty==0.0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 99
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`), pycodestyle (`E`), and Pylint (`PL`) rules.
select = ["E4", "E7", "E9", "F", "PLC", "PLE", "PLR", "PLW"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pylint]
max-args = 10
